--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           lfs: true
+      - name: checkoutLFS
+        uses: actions/checkout@v2
+      - run: git lfs pull   
 
       - name: Log in to the container registry
         uses: docker/login-action@v1
