--- a/.github/workflows/sync_to_hf.yaml
+++ b/.github/workflows/sync_to_hf.yaml
@@ -12,6 +12,9 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+      - name: checkoutLFS
+        uses: actions/checkout@v2
+      - run: git lfs pull 
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
