--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,11 +15,17 @@ jobs:
       packages: write
       contents: read
     steps:
-    - name: checkout engine with LFS
-      uses: actions/checkout@v2
-      with:
-        lfs: true
-
+      - name: checkout engine without LFS
+        uses: actions/checkout@v2
+        with:
+          lfs: false
+      - name: apply_lfs_filters
+        run: |
+          git config --local lfs.fetchexclude '**/Windows/**'
+      - name: checkout engine with LFS
+        uses: actions/checkout@v2
+        with:
+          lfs: true
       - name: Log in to the container registry
         uses: docker/login-action@v1
         with:
