--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,8 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Check out the repo 1
+        uses: actions/checkout@v3
       - name: apply_lfs_filters
         run: |
           git lfs fetch --all
